--- a/EFCore.WebAPI/appsettings.json
+++ b/EFCore.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection" : "Password=33385412VR.jp@;Persist Security Info=True;User ID=sa;Initial Catalog=HEROAPP;Data Source=NOTEBOOK-DELL"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
